Final adjustments aded, only read me file needs to be completed

--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,11 @@ body {
     justify-content: center;
     align-items: center;
   }
+
+.calc-body{
+  box-shadow: 6px -6px #2E8B57 ;
+}
+
+.number{
+  box-shadow: 6px 3px #2E8B57 ;
+}
